09_lab-09/networkpolicy/backend-np.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-egress-backend
spec:
  podSelector: 
    matchLabels:
      run: backend
  ingress:
  - from:
    - podSelector:
        matchLabels:
          run: frontend
  policyTypes:
  - Ingress
