09_lab-09/networkpolicy/np-deny-all.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-egress
  namespace: default
spec:
  podSelector: {}
  policyTypes:
  - Egress
  - Ingress
  egress:
  # Règle 2 : Autoriser la résolution DNS (Indispensable !)
  - to:
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
